--- a/i3status.conf
+++ b/i3status.conf
@@ -10,8 +10,9 @@ general {
 
 order = "run_watch DHCP"
 order += "wireless wlp3s0"
-order += "ethernet usb0"
 order += "ethernet enp0s25"
+order += "ethernet tun0"
+order += "ethernet enp0s26u1u2"
 order += "battery 0"
 order += "volume master"
 order += "cpu_temperature 0"
@@ -28,10 +29,16 @@ ethernet enp0s25 {
 	format_down = "E: down"
 }
 
-ethernet usb0 {
+ethernet enp0s26u1u2 {
         # if you use %speed, i3status requires root privileges
         format_up = "U: %ip"
 	format_down = "U: down"
+}
+
+ethernet tun0 {
+        # if you use %speed, i3status requires root privileges
+        format_up = "VPN: %ip"
+	format_down = "VPN: down"
 }
 
 battery 0 {
