--- a/i3status.conf
+++ b/i3status.conf
@@ -8,41 +8,43 @@ general {
 	output_format = i3bar
 }
 
-order = "run_watch DHCP"
-order += "wireless wlp3s0"
+order = "wireless wlp3s0"
 order += "ethernet enp0s25"
-order += "ethernet tun0"
-order += "ethernet enp0s26u1u2"
+# order += "ethernet tun0"
+# order += "ethernet enp0s26u1u2"
 order += "battery 0"
 order += "volume master"
 order += "cpu_temperature 0"
 order += "time"
 
 wireless wlp3s0 {
-        format_up = "W: %quality @ %essid (%bitrate) %ip"
-        format_down = "W: down"
+        format_up = " %quality @ %essid (%bitrate) %ip"
+        format_down = " down"
 }
 
 ethernet enp0s25 {
         # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-	format_down = "E: down"
+        format_up = " %ip (%speed)"
+	      format_down = " down"
 }
 
 ethernet enp0s26u1u2 {
         # if you use %speed, i3status requires root privileges
         format_up = "U: %ip"
-	format_down = "U: down"
+        format_down = "U: down"
 }
 
 ethernet tun0 {
         # if you use %speed, i3status requires root privileges
-        format_up = "VPN: %ip"
-	format_down = "VPN: down"
+        format_up = " %ip"
+        format_down = " down"
 }
 
 battery 0 {
         format = "%status %percentage %remaining"
+        status_chr = ""
+        status_bat = ""
+        status_full = ""
 }
 
 run_watch DHCP {
@@ -50,15 +52,16 @@ run_watch DHCP {
 }
 
 time {
-	format = "%d.%m. - %H:%M"
+  format = " %d.%m.  %H:%M "
 }
 
 cpu_temperature 0 {
-	format = "T: %degrees °C"
+  format = " %degrees °C"
 }
 
 volume master {
-        format = "♪: %volume"
+        format = " %volume"
+        format_muted = " %volume"
         device = "default"
         mixer = "Master"
         mixer_idx = 0
